styles.css
* {
  box-sizing: border-box;
  font-family: "Space Mono", monospace;
}

:root {
  --Strong-cyan: hsl(172, 67%, 45%);
  --Very-dark-cyan: hsl(183, 100%, 15%);
  --Dark-grayish-cyan-1: hsl(186, 14%, 43%);
  --Dark-grayish-cyan-2: hsl(184, 14%, 56%);
  --Light-grayish-cyan-1: hsl(185, 41%, 84%);
  --Light-grayish-cyan-2: hsl(189, 41%, 97%);
  --White: hsl(0, 0%, 100%);
  --hover: hsl(185, 60%, 80%);
}

body {
  font-size: 24px;
  background-color: var(--Light-grayish-cyan-1);
  margin: 0 auto;
}

.logo {
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 2em 0;
}

.header {
  font-size: 0.9rem;
  color: var(--Dark-grayish-cyan-1);
}

.container {
  background-color: var(--White);
  border-radius: 20px;
  padding: 1.5em;
}

.input-container {
  position: relative;
}

.icon {
  position: absolute;
  top: 0.7em;
  left: 0.5em;
}

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  /* display: none; <- Crashes Chrome on hover */
  -webkit-appearance: none;
  margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
}

input[type="number"] {
  -moz-appearance: textfield; /* Firefox */
}

.input {
  background-color: var(--Light-grayish-cyan-2);
  border: 2px solid var(--Light-grayish-cyan-2);
  border-radius: 5px;
  outline: none;
  text-align: end;
  padding: 0.25em;
  padding-right: 0.75em;
  width: 100%;
  font-size: inherit;
  color: var(--Very-dark-cyan);
  font-weight: 700;
  margin-bottom: 1em;
  cursor: pointer;
}

.input:focus {
  border-color: var(--Strong-cyan);
}

.grid-container {
  display: grid;
  grid-template-columns: repeat(2, 50%);
  gap: 0.5em;
  width: 100%;
  justify-content: space-between;
  margin-bottom: 1.5em;
}

.button {
  background-color: var(--Very-dark-cyan);
  font-size: 1.25rem;
  color: var(--White);
  font-weight: 700;
  cursor: pointer;
}

.button:focus {
  background-color: var(--Strong-cyan);
  border-color: var(--Strong-cyan);
  color: var(--Very-dark-cyan);
  transition: 0.2s;
}

.button:hover {
  background-color: var(--hover);
  border-color: var(--hover);
  color: var(--Very-dark-cyan);
  transition: 0.2s;
}

.tip-button {
  padding: 0.25em 0;
  border-radius: 5px;
  border: 2px solid var(--Very-dark-cyan);
  outline: none;
}

#custom-tip {
  text-align: end;
  font-family: inherit;
  background-color: var(--Light-grayish-cyan-2);
  border: 2px solid var(--Light-grayish-cyan-2);
  padding-top: 0;
  padding-bottom: 0;
  padding-right: 0.75em;
  font-size: inherit;
  color: var(--Very-dark-cyan);
  font-weight: 700;
  cursor: pointer;
}

#custom-tip:focus {
  border-color: var(--Strong-cyan);
}

.tip-container {
  background-color: var(--Very-dark-cyan);
  color: var(--White);
  font-size: 0.9rem;
  padding: 2em;
  border-radius: 10px;
}

.tip-amount-container,
.total-container {
  display: flex;
  justify-content: space-between;
  position: relative;
  margin-bottom: 2.5em;
}

.tip-amount::after,
.total-amount::after {
  content: "/ person";
  opacity: 0.4;
  position: absolute;
  top: 2em;
  left: 0;
  font-size: 0.75rem;
}

.value {
  font-size: 2rem;
  font-weight: 700;
  color: var(--Strong-cyan);
}

.reset {
  color: var(--Very-dark-cyan);
  width: 100%;
  padding: 0.75em;
  font-size: 1rem;
  font-weight: 700;
  text-transform: uppercase;
  cursor: pointer;
  background-color: var(--Strong-cyan);
  border: 1px solid var(--Strong-cyan);
  border-radius: 5px;
}

.reset:hover {
  background-color: var(--hover);
  border-color: var(--hover);
}

.attribution {
  margin-top: 1em;
  font-size: 11px;
  text-align: center;
}
.attribution a {
  color: hsl(228, 45%, 44%);
}

@media (min-width: 1000px) {
  main {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }
  .container {
    display: flex;
    width: 900px;
    height: 475px;
    justify-content: space-between;
  }

  .grid-container {
    display: grid;
    grid-template-columns: repeat(3, 120px);
    gap: 0.5em;
    width: 100%;
    justify-content: space-between;
    margin-bottom: 1.5em;
  }

  .calculator-container {
    margin-right: 2em;
  }

  .tip-container {
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
  }

  .value {
    font-size: 3rem;
  }

  .tip-amount-container,
  .total-container {
    align-items: center;
  }

  .tip-amount::after,
  .total-amount::after {
    top: 2em;
    width: 100px;
  }

  .tip-amount,
  .total-amount {
    transform: translateY(-0.5em);
  }
}

@media (max-width: 318px) {
  .value {
    font-size: 1rem;
  }
}

